# kAirPods

plasmoid/: metadata.json
service/: Cargo.toml
service/src/airpods/: protocol.rs
