[package]
name = "kairpodsd"
version = "0.2.1"
edition = "2024"
rust-version = "1.88.0"

authors = ["Can Boluk <me@can.ac>"]
description = "D-Bus service for AirPods management in KDE Plasma"
license = "GPL-3.0-or-later"

homepage = "https://github.com/can1357/kAirPods"
repository = "https://github.com/can1357/kAirPods"
documentation = "https://github.com/can1357/kAirPods"
readme = "../README.md"

keywords = ["kde", "plasma", "airpods", "bluetooth", "dbus"]
categories = ["hardware-support", "desktop", "os::linux-apis"]

[dependencies]
tokio = { version = "1.47", features = ["full"] }
zbus = { version = "5.9", features = ["tokio"] }
bluer = { version = "0.17", features = ["l2cap", "bluetoothd"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
hex = "0.4"
futures = "0.3"
toml = "0.9"
crossbeam = { version = "0.8", features = ["std"] }
parking_lot = "0.12"
heapless = "0.8"
smallvec = "1.10"
smol_str = { version = "0.3", features = ["serde"] }
rand = "0.8"
strum = { version = "0.27", features = ["derive"] }
heed = { version = "0.22", features = ["serde-bincode"] }
dirs = "6.0"
uuid = "1"

[dev-dependencies]
tempfile = "3.14"

[[bin]]
name = "kairpodsd"
path = "src/main.rs"
